--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,236 @@
-// Place all the styles related to the posts controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  font-family: 'Roboto Slab', serif;
+  min-width: 750px;
+}
+
+img {
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+}
+
+.header {
+  width: 100%;
+  min-height: 100vh;
+  position: relative;
+  padding-bottom: 4.8vh;
+  background-image: image-url("back.jpg");
+  background-size: cover;
+}
+
+#logo {
+  animation: fill 0.5s ease forwards 2.2s;
+}
+
+#logo path:nth-child(1) {
+  stroke-dasharray: 224;
+  stroke-dashoffset: 224;
+  animation: line-anim 2s ease forwards;
+}
+
+#logo path:nth-child(2) {
+  stroke-dasharray: 21;
+  stroke-dashoffset: 21;
+  animation: line-anim 2s ease forwards 0.3s;
+}
+
+#logo path:nth-child(3) {
+  stroke-dasharray: 100;
+  stroke-dashoffset: 100;
+  animation: line-anim 2s ease forwards 0.6s;
+}
+
+#logo path:nth-child(4) {
+  stroke-dasharray: 95;
+  stroke-dashoffset: 95;
+  animation: line-anim 2s ease forwards 0.9s;
+}
+
+#logo path:nth-child(5) {
+  stroke-dasharray: 135;
+  stroke-dashoffset: 135;
+  animation: line-anim 2s ease forwards 1.2s;
+}
+
+@keyframes line-anim {
+  to{
+    stroke-dashoffset: 0;
+  }
+}
+
+@keyframes fill {
+  from {
+    fill: transparent;
+  }
+  to{
+    fill: #fff;
+  }
+}
+
+.banner-wrapper {
+  z-index: 10;
+  display: flex;
+  width: 100%;
+  height: 13.5vh;
+  align-items: center;
+  background-color: rgba($color: #38383E, $alpha: 0.8);
+  padding-left: 10%;
+  .logo-img {
+    height: 77px;
+    width: 77px;
+  }
+  .banner {
+    width: calc(100% - 77px);
+    height: 77px;
+    padding-left: 1.5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    .top {
+      display: flex;
+      justify-content: space-between;
+      .logo {
+        .header-title {
+          color: #fff;
+          text-decoration: none;
+        }
+      }
+      .right-top {
+        text-transform: none;
+        padding-right: 20px;
+        font-size: 14px;
+        a {
+          text-decoration: none;
+          color: #fff;
+        }
+      }
+    }
+    .nav {
+      width: 100%;
+      height: auto;
+      ul.menu {
+        height: inherit;
+        list-style-type: none;
+        display: flex;
+        align-items: center;
+        width: 50%;
+        font-size: 14px;
+        li {
+          flex: 1 1 auto;
+          height: inherit;
+          display: flex;
+          align-items: center;
+          a {
+            text-decoration: none;
+            color: #fff;
+          }
+        }
+      }
+    }
+  }
+}
+
+.contents {
+  height: 100%;
+  width: 100%;
+  .postTitle{
+    padding-top: 20px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+  }
+  .postDate{
+    font-size: 15px;
+    color: #999;
+    text-align: center;
+  }
+  .postAuthor{
+    font-size: 15px;
+    color: #999;
+    text-align: center;
+  }
+  .postManage{
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    &__edit{
+      display: block;
+      border-radius: 5px;
+      color: #ffffff;
+      background-color:#55c500;
+      padding: 0 10px;
+      text-decoration: none;
+      margin-right: 10px;
+    }
+    &__delete{
+      display: block;
+      border-radius: 5px;
+      color: #ffffff;
+      background-color:#55c500;
+      padding: 0 10px;
+      text-decoration: none;
+      margin-left: 10px;
+    }
+  }
+  .postText{
+    margin: 20px 30px;
+  }
+}
+.form{
+  width: 85%;
+  height: 100%;
+  margin: 0 auto;
+  padding-top: 30px;
+  &__title{
+    display: block;
+    width: 100%;
+    height: 50px;
+  }
+  &__text{
+    display: block;
+    width: 100%;
+    height: 50%;
+    margin-top: 15px;
+  }
+  &__btn{
+    display: block;
+    width: 30%;
+    margin: 15px auto 0;
+  }
+}
+
+
+.main-container {
+  display: flex;
+  justify-content: center;
+  .wrapper{
+    width: 70%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: rgba($color: #000000, $alpha: 0.6)
+  }
+  .content {
+    width: calc(100vh / 2.8);
+    height: calc(100vh / 2.8);
+    padding: 0.5em 1em;
+    font-weight: bold;
+    background-color: #888897;
+    margin: 2% 0 2% 4%;
+  }
+}
+
+footer {
+  height: 4.8vh;
+  width: 100%;
+  background-color: rgba($color: #38383E, $alpha: 0.9);
+  bottom: 0;
+  position: absolute;
+}
